--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+jca (2.3.5-1) unstable; urgency=low
+
+  * New upstream version
+  * debian/rules: switch to dh7 and javahelper
+
+ -- Michael Davidsaver <mdavidsaver@bnl.gov>  Mon, 21 Mar 2011 16:41:15 -0400
+
 jca (2.3.2-1) unstable; urgency=low
 
   * Initial release
