--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+jca (2.3.6-1) unstable; urgency=low
+
+  * New upstream version
+
+ -- Michael Davidsaver <mdavidsaver@bnl.gov>  Wed, 05 Dec 2012 17:43:38 -0500
+
 jca (2.3.5-2) unstable; urgency=low
 
   * Command line test programs jcaget and jcaput
