--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+jca (2.3.6-2) unstable; urgency=low
+
+  * Multiarch for wheezy
+
+ -- Michael Davidsaver <mdavidsaver@bnl.gov>  Fri, 17 May 2013 14:11:08 -0400
+
 jca (2.3.6-1) unstable; urgency=low
 
   * New upstream version
