--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+jca (2.3.6-3.1) unstable; urgency=low
+
+  * Fixed typo in debian/control 
+
+ -- Leon Flaks <flaks@bnl.gov>  Sat, 12 Mar 2016 16:44:24 -0500
+
 jca (2.3.6-3) unstable; urgency=low
 
   * Build with default jdk.
